Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn2_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn2_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn2_translation-sr-brankokovacevic.json
@@ -560,7 +560,7 @@
   "dn2:100.2": "Ali pošto si svoju grešku prepoznao kao grešku i priznao je u skladu sa Dhammom, prihvatam tvoju ispovest. ",
   "dn2:100.3": "Jer to je, veliki kralju, rast u praksi plemenitih: prepoznati grešku kao grešku, priznati je u skladu sa Dhammom, te ostati obuzdan ubuduće.” ",
   "dn2:101.1": "Kad ovo bi izgovoreno, kralj Ađātasattu reče Blaženome: ",
-  "dn2:101.2": "„A sada, poštovani gospodine, odlazim. Vrlo sam zauzet i mnogo toga treba još uraditi.” ",
+  "dn2:101.2": "„A sada je, poštovani gospodine, vreme da krenem. Vrlo sam zauzet i mnogo toga treba još uraditi.”",
   "dn2:101.3": "„Vreme je, veliki kralju, da uradiš kako misliš da treba.” ",
   "dn2:101.4": "Kralj Ađātasattu se obradova rečima Blaženog i zahvali se na njima. Ustade sa svog mesta, oda počast Blaženom, te pazeći da mu ovaj ostane sa desne strane, ode. ",
   "dn2:102.1": "Nedugo pošto je kralj Ađātasattu otišao, Blaženi se obrati monasima: ",
