Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -54,5 +54,6 @@
   "dn16:1.5.7": "A pogotovo svih sedam!",
   "dn16:1.5.8": "Kralj Ađātasattu in ne može pobediti ratom, poštovani Gotama, već samo glasinama, samo ako unese razdor među njih.",
   "dn16:1.5.9": "„A sada je, poštovani Gotama, vreme da krenem. Vrlo sam zauzet i mnogo toga treba još uraditi.”",
-  "dn16:1.5.10": "„Učini, brahmane, onako kako misliš da treba.”"
+  "dn16:1.5.10": "„Učini, brahmane, onako kako misliš da treba.”",
+  "dn16:1.5.11": "Na to brahman Vassakāra, saglasan i obradovan onim što je Blaženi rekao, ustade sa svog mesta i otide."
 }
