--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -57,5 +57,6 @@
   "dn16:1.5.10": "„Učini, brahmane, onako kako misliš da treba.”",
   "dn16:1.5.11": "Na to brahman Vassakāra, saglasan i obradovan onim što je Blaženi rekao, ustade sa svog mesta i otide.",
   "dn16:1.6.0": "3. Načela na kojima monasi opstaju",
-  "dn16:1.6.1": "Ne dugo pošto je brahman Vassakāra otišao, Blaženi reče Ānandi:"
+  "dn16:1.6.1": "Ne dugo pošto je brahman Vassakāra otišao, Blaženi reče Ānandi:",
+  "dn16:1.6.2": "„Hajde, Ānanda, obiđi monahe koji žive u okolini Rāđagahe i reci im da se okupe u velikoj dvorani."
 }
