--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.11_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "thig5.11:1.1": "„Junge Männer nehmen einen Stößel ",
   "thig5.11:1.2": "und zerstoßen damit das Getreide. ",
   "thig5.11:1.3": "Sie unterhalten Frauen und Kinder ",
-  "thig5.11:1.4": "und gewinnen so Reichtum. ",
+  "thig5.11:1.4": "und gewinnen so Vermögen. ",
   "thig5.11:2.1": "Tut, wie vom Buddha geheißen, ",
   "thig5.11:2.2": "ihr werdet es nicht bereuen. ",
   "thig5.11:2.3": "Wascht rasch eure Füße ",
