--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -59,5 +59,6 @@
   "dn16:1.6.0": "3. Načela na kojima monasi opstaju",
   "dn16:1.6.1": "Ne dugo pošto je brahman Vassakāra otišao, Blaženi reče Ānandi:",
   "dn16:1.6.2": "„Hajde, Ānanda, obiđi monahe koji žive u okolini Rāđagahe i reci im da se okupe u velikoj dvorani.”",
-  "dn16:1.6.3": "„Da, poštovani gospodine,” odgovori Ananda i učini kako je njega zatraženo, pa obavesti Blaženog:"
+  "dn16:1.6.3": "„Da, poštovani gospodine,” odgovori Ananda i učini kako je njega zatraženo, pa obavesti Blaženog:",
+  "dn16:1.6.4": "„Monaška zajednica je okupljena. Poštovani gospodine, vreme je da uradite ono što mislite da treba.”"
 }
