--- a/translation/de/sabbamitta/sutta/kn/thig/thig7.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig7.1_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "thig7.1:1.1": "„Junge Männer nehmen einen Stößel ",
   "thig7.1:1.2": "und zerstoßen damit das Getreide. ",
   "thig7.1:1.3": "Sie unterhalten Frauen und Kinder ",
-  "thig7.1:1.4": "und gewinnen so Reichtum. ",
+  "thig7.1:1.4": "und gewinnen so Vermögen. ",
   "thig7.1:2.1": "Arbeite an den Anweisungen des Buddha, ",
   "thig7.1:2.2": "du wirst es nicht bereuen. ",
   "thig7.1:2.3": "Wasch rasch deine Füße ",
