Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dn16:1.6.4": "„Monaška zajednica je okupljena. Poštovani gospodine, vreme je da uradite ono što mislite da treba.”",
   "dn16:1.6.5": "A Blaženi ustade sa svog mesta i otide do velike dvorane. Tamo sede na unapred pripremljeno mesto.",
   "dn16:1.6.6": "Sedeći tako, reče on monasima:",
-  "dn16:1.6.7": "„Monasi, izložiću vam sedam načela na kojima monasi opstaju, ne propadaju."
+  "dn16:1.6.7": "„Monasi, izložiću vam sedam načela na kojima monasi opstaju, ne propadaju.",
+  "dn16:1.6.8": "Slušajte i dobro zapamtite šta ću vam reći.”"
 }
