--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -65,5 +65,6 @@
   "dn16:1.6.6": "Sedeći tako, reče on monasima:",
   "dn16:1.6.7": "„Monasi, izložiću vam sedam načela na kojima monasi opstaju, ne propadaju.",
   "dn16:1.6.8": "Slušajte i dobro zapamtite šta ću vam reći.”",
-  "dn16:1.6.9": "„Da, poštovani gospodine,” odgovoriše monasi."
+  "dn16:1.6.9": "„Da, poštovani gospodine,” odgovoriše monasi.",
+  "dn16:1.6.10": "A Blaženi ovako nastavi:"
 }
