--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -66,5 +66,6 @@
   "dn16:1.6.7": "„Monasi, izložiću vam sedam načela na kojima monasi opstaju, ne propadaju.",
   "dn16:1.6.8": "Slušajte i dobro zapamtite šta ću vam reći.”",
   "dn16:1.6.9": "„Da, poštovani gospodine,” odgovoriše monasi.",
-  "dn16:1.6.10": "A Blaženi ovako nastavi:"
+  "dn16:1.6.10": "A Blaženi ovako nastavi:",
+  "dn16:1.6.11": "(1) „Monasi, sve dok se monasi često okupljaju, redovno sastaju, može se očekivati da oni napreduju, a ne da propadaju."
 }
