--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -68,5 +68,6 @@
   "dn16:1.6.9": "„Da, poštovani gospodine,” odgovoriše monasi.",
   "dn16:1.6.10": "A Blaženi ovako nastavi:",
   "dn16:1.6.11": "(1) „Monasi, sve dok se monasi često okupljaju, redovno sastaju, može se očekivati da oni napreduju, a ne da propadaju.",
-  "dn16:1.6.12": "(2) Sve dok se monasi u slozi sastaju, u slozi razilaze, u slozi svoje poslove obavljaju, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.6.12": "(2) Sve dok se monasi u slozi sastaju, u slozi razilaze, u slozi svoje poslove obavljaju, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.6.13": "(3) Sve dok monasi ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoja pravila vežbanja, može se očekivati da oni napreduju, a ne da propadaju."
 }
