Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -69,5 +69,6 @@
   "dn16:1.6.10": "A Blaženi ovako nastavi:",
   "dn16:1.6.11": "(1) „Monasi, sve dok se monasi često okupljaju, redovno sastaju, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.6.12": "(2) Sve dok se monasi u slozi sastaju, u slozi razilaze, u slozi svoje poslove obavljaju, može se očekivati da oni napreduju, a ne da propadaju.",
-  "dn16:1.6.13": "(3) Sve dok monasi ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoja pravila vežbanja, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.6.13": "(3) Sve dok monasi ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoja pravila vežbanja, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.6.14": "(4) Sve dok monasi poštuju one među sobom koji su stariji po monaškom stažu, ophode se sa njima sa poštovanjem, uvažavaju i slave, smatraju da njihove reči vredi saslušati, može se očekivati da oni napreduju, a ne da propadaju."
 }
