--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -72,5 +72,6 @@
   "dn16:1.6.13": "(3) Sve dok monasi ne proglašavaju pravilom nešto što već ne važi kao pravilo, ne ukidaju ono što već važi kao pravilo i drže se onoga što znaju kao svoja pravila vežbanja, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.6.14": "(4) Sve dok monasi poštuju one među sobom koji su stariji po monaškom stažu, ophode se sa njima sa poštovanjem, uvažavaju i slave, smatraju da njihove reči vredi saslušati, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.6.15": "(5) Sve dok monasi ne potpadnu pod uticaj žudnje za novim preporađanjem, može se očekivati da oni napreduju, a ne da propadaju.",
-  "dn16:1.6.16": "(6) Sve dok monasi s radošću žive u svojim boravištima u šumi, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.6.16": "(6) Sve dok monasi s radošću žive u svojim boravištima u šumi, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.6.17": "(7) Monasi, sve dok monasi svaki za sebe neguju svesnost, tako da njihovi vrli saputnici u svetačkom životu mogu da im se pridruže, a potom da sa njima ugodno žive, može se očekivati da oni napreduju, a ne da propadaju."
 }
