--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -77,5 +77,6 @@
   "dn16:1.6.18": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju.",
   "dn16:1.7.1": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju. Slušajte i dobro zapamtite šta ću vam reći.”",
   "dn16:1.7.2": "„Da, poštovani gospodine,” odgovoriše monasi.",
-  "dn16:1.7.3": "A Blaženi ovako nastavi:"
+  "dn16:1.7.3": "A Blaženi ovako nastavi:",
+  "dn16:1.7.4": "(1) „Monasi, sve dok monasi ne vole suviše svoje poslove,1 ne raduju im se i ne oduševljavaju se njima, može se očekivati da oni napreduju, a ne da propadaju."
 }
