--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -80,5 +80,6 @@
   "dn16:1.7.3": "A Blaženi ovako nastavi:",
   "dn16:1.7.4": "(1) „Monasi, sve dok monasi ne vole suviše svoje poslove,1 ne raduju im se i ne oduševljavaju se njima, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.7.5": "(2) Sve dok monasi ne vole suviše razgovor, ne raduju mu se i ne oduševljavaju se njime, može se očekivati da oni napreduju, a ne da propadaju.",
-  "dn16:1.7.6": "(3) Sve dok monasi ne vole suviše spavanje, ne raduju mu se i ne oduševljavaju se njime, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.7.6": "(3) Sve dok monasi ne vole suviše spavanje, ne raduju mu se i ne oduševljavaju se njime, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.7.7": "(4) Sve dok monasi ne vole suviše druženje, ne raduju mu se i ne oduševljavaju se njime, može se očekivati da oni napreduju, a ne da propadaju."
 }
