Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -84,5 +84,6 @@
   "dn16:1.7.7": "(4) Sve dok monasi ne vole suviše druženje, ne raduju mu se i ne oduševljavaju se njime, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.7.8": "(5) Sve dok monasi nemaju loše želje, nisu pod njihovim uticajem, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.7.9": "(6) Sve dok monasi nisu sa rđavim prijateljima, sa rđavim drugovima, nisu sa njima bliski, može se očekivati da oni napreduju, a ne da propadaju.",
-  "dn16:1.7.10": "(7) Sve dok se monasi ne zaustave na nižim postignućima i ulažu napor da dostignu i ona viša, sve dok ne uđu u tok, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.7.10": "(7) Sve dok se monasi ne zaustave na nižim postignućima i ulažu napor da dostignu i ona viša, sve dok ne uđu u tok, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.8.1": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju."
 }
