--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -86,5 +86,6 @@
   "dn16:1.7.9": "(6) Sve dok monasi nisu sa rđavim prijateljima, sa rđavim drugovima, nisu sa njima bliski, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.7.10": "(7) Sve dok se monasi ne zaustave na nižim postignućima i ulažu napor da dostignu i ona viša, sve dok ne uđu u tok, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.8.1": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju.",
-  "dn16:1.8.2": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju…"
+  "dn16:1.8.2": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju…",
+  "dn16:1.8.3": "„Monasi, sve dok monasi budu ispunjeni poverenjem…"
 }
