--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -88,5 +88,6 @@
   "dn16:1.8.1": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju.",
   "dn16:1.8.2": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju…",
   "dn16:1.8.3": "„Monasi, sve dok monasi budu ispunjeni poverenjem…",
-  "dn16:1.8.4": "stidom zbog svega loše učinjenog…"
+  "dn16:1.8.4": "stidom zbog svega loše učinjenog…",
+  "dn16:1.8.5": "strahom od svega loše učinjenog…"
 }
