Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -89,5 +89,6 @@
   "dn16:1.8.2": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju…",
   "dn16:1.8.3": "„Monasi, sve dok monasi budu ispunjeni poverenjem…",
   "dn16:1.8.4": "stidom zbog svega loše učinjenog…",
-  "dn16:1.8.5": "strahom od svega loše učinjenog…"
+  "dn16:1.8.5": "strahom od svega loše učinjenog…",
+  "dn16:1.8.6": "sve dok su učeni…"
 }
