Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -90,5 +90,6 @@
   "dn16:1.8.3": "„Monasi, sve dok monasi budu ispunjeni poverenjem…",
   "dn16:1.8.4": "stidom zbog svega loše učinjenog…",
   "dn16:1.8.5": "strahom od svega loše učinjenog…",
-  "dn16:1.8.6": "sve dok su učeni…"
+  "dn16:1.8.6": "sve dok su učeni…",
+  "dn16:1.8.7": "energični…"
 }
