--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -91,5 +91,6 @@
   "dn16:1.8.4": "stidom zbog svega loše učinjenog…",
   "dn16:1.8.5": "strahom od svega loše učinjenog…",
   "dn16:1.8.6": "sve dok su učeni…",
-  "dn16:1.8.7": "energični…"
+  "dn16:1.8.7": "energični…",
+  "dn16:1.8.8": "sa čvrsto uspostavljenom svesnošću…"
 }
