--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -92,5 +92,6 @@
   "dn16:1.8.5": "strahom od svega loše učinjenog…",
   "dn16:1.8.6": "sve dok su učeni…",
   "dn16:1.8.7": "energični…",
-  "dn16:1.8.8": "sa čvrsto uspostavljenom svesnošću…"
+  "dn16:1.8.8": "sa čvrsto uspostavljenom svesnošću…",
+  "dn16:1.8.9": "mudri, može se očekivati da oni napreduju, a ne da propadaju."
 }
