--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -93,5 +93,6 @@
   "dn16:1.8.6": "sve dok su učeni…",
   "dn16:1.8.7": "energični…",
   "dn16:1.8.8": "sa čvrsto uspostavljenom svesnošću…",
-  "dn16:1.8.9": "mudri, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.8.9": "mudri, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.8.10": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju."
 }
