--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -96,5 +96,6 @@
   "dn16:1.8.9": "mudri, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.8.10": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju.",
   "dn16:1.8.11": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju. Slušajte i dobro zapamtite šta ću vam reći.”",
-  "dn16:1.8.12": "\"Da, poštovani gospodine\", odgovoriše monasi."
+  "dn16:1.8.12": "\"Da, poštovani gospodine\", odgovoriše monasi.",
+  "dn16:1.8.13": "A Blaženi ovako nastavi:"
 }
