Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -98,5 +98,6 @@
   "dn16:1.8.11": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju. Slušajte i dobro zapamtite šta ću vam reći.”",
   "dn16:1.8.12": "\"Da, poštovani gospodine\", odgovoriše monasi.",
   "dn16:1.8.13": "A Blaženi ovako nastavi:",
-  "dn16:1.9.1": "„Monasi, sve dok monasi budu razvijali svesnost kao elemenat probuđenja…"
+  "dn16:1.9.1": "„Monasi, sve dok monasi budu razvijali svesnost kao elemenat probuđenja…",
+  "dn16:1.9.2": "istraživanje pojava…"
 }
