--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -100,5 +100,6 @@
   "dn16:1.8.13": "A Blaženi ovako nastavi:",
   "dn16:1.9.1": "„Monasi, sve dok monasi budu razvijali svesnost kao elemenat probuđenja…",
   "dn16:1.9.2": "istraživanje pojava…",
-  "dn16:1.9.3": "energičnost…"
+  "dn16:1.9.3": "energičnost…",
+  "dn16:1.9.4": "ushićenje…"
 }
