--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -101,5 +101,6 @@
   "dn16:1.9.1": "„Monasi, sve dok monasi budu razvijali svesnost kao elemenat probuđenja…",
   "dn16:1.9.2": "istraživanje pojava…",
   "dn16:1.9.3": "energičnost…",
-  "dn16:1.9.4": "ushićenje…"
+  "dn16:1.9.4": "ushićenje…",
+  "dn16:1.9.5": "smirenje…"
 }
