Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -102,5 +102,6 @@
   "dn16:1.9.2": "istraživanje pojava…",
   "dn16:1.9.3": "energičnost…",
   "dn16:1.9.4": "ushićenje…",
-  "dn16:1.9.5": "smirenje…"
+  "dn16:1.9.5": "smirenje…",
+  "dn16:1.9.6": "koncentraciju…"
 }
