--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -103,5 +103,6 @@
   "dn16:1.9.3": "energičnost…",
   "dn16:1.9.4": "ushićenje…",
   "dn16:1.9.5": "smirenje…",
-  "dn16:1.9.6": "koncentraciju…"
+  "dn16:1.9.6": "koncentraciju…",
+  "dn16:1.9.7": "spokojstvo kao elemenat probuđenja, može se očekivati da oni napreduju, a ne da propadaju."
 }
