--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -104,5 +104,6 @@
   "dn16:1.9.4": "ushićenje…",
   "dn16:1.9.5": "smirenje…",
   "dn16:1.9.6": "koncentraciju…",
-  "dn16:1.9.7": "spokojstvo kao elemenat probuđenja, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.9.7": "spokojstvo kao elemenat probuđenja, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.10.1": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju."
 }
