--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -108,5 +108,6 @@
   "dn16:1.10.1": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju.",
   "dn16:1.10.2": "Monasi, izložiću vam još sedam načela na kojima monasi opstaju, ne propadaju. Slušajte i dobro zapamtite šta ću vam reći.”",
   "dn16:1.10.3": "„Da, poštovani gospodine,” odgovoriše monasi.",
-  "dn16:1.10.4": "A Blaženi ovako nastavi:"
+  "dn16:1.10.4": "A Blaženi ovako nastavi:",
+  "dn16:1.10.5": "„Monasi, sve dok monasi budu razvijali opažaj prolaznosti…"
 }
