--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -110,5 +110,6 @@
   "dn16:1.10.3": "„Da, poštovani gospodine,” odgovoriše monasi.",
   "dn16:1.10.4": "A Blaženi ovako nastavi:",
   "dn16:1.10.5": "„Monasi, sve dok monasi budu razvijali opažaj prolaznosti…",
-  "dn16:1.10.6": "opažaj nepostojanja trajnog sopstva…"
+  "dn16:1.10.6": "opažaj nepostojanja trajnog sopstva…",
+  "dn16:1.10.7": "opažaj odbojnosti…"
 }
