--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -112,5 +112,6 @@
   "dn16:1.10.5": "„Monasi, sve dok monasi budu razvijali opažaj prolaznosti…",
   "dn16:1.10.6": "opažaj nepostojanja trajnog sopstva…",
   "dn16:1.10.7": "opažaj odbojnosti…",
-  "dn16:1.10.8": "opažaj opasnosti…"
+  "dn16:1.10.8": "opažaj opasnosti…",
+  "dn16:1.10.9": "opažaj napuštanja…"
 }
