Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -114,5 +114,6 @@
   "dn16:1.10.7": "opažaj odbojnosti…",
   "dn16:1.10.8": "opažaj opasnosti…",
   "dn16:1.10.9": "opažaj napuštanja…",
-  "dn16:1.10.10": "opažaj hlađenja strasti…"
+  "dn16:1.10.10": "opažaj hlađenja strasti…",
+  "dn16:1.10.11": "opažaj prestanka, može se očekivati da oni napreduju, a ne da propadaju. "
 }
