--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -115,5 +115,6 @@
   "dn16:1.10.8": "opažaj opasnosti…",
   "dn16:1.10.9": "opažaj napuštanja…",
   "dn16:1.10.10": "opažaj hlađenja strasti…",
-  "dn16:1.10.11": "opažaj prestanka, može se očekivati da oni napreduju, a ne da propadaju. "
+  "dn16:1.10.11": "opažaj prestanka, može se očekivati da oni napreduju, a ne da propadaju. ",
+  "dn16:1.10.12": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju."
 }
