--- a/translation/de/sabbamitta/sutta/an/an8/an8.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.8_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "an8.8:5.8": "„Nun, Götterkönig, ich will dir ein Gleichnis geben. ",
   "an8.8:5.9": "Denn mithilfe eines Gleichnisses verstehen manche vernünftigen Menschen die Bedeutung des Gesagten. ",
   "an8.8:6.1": "Wie ein großer Haufen Getreide, der nicht weit von einem Dorf oder einer Stadt entfernt wäre, ",
-  "an8.8:6.2": "und eine große Menschenmenge würde davon Korn nehmen, ",
+  "an8.8:6.2": "und eine große Menschenmenge würde davon Getreide nehmen, ",
   "an8.8:6.3": "mit Tragestangen, Körben, in Schürzen oder mit den Händen. ",
   "an8.8:6.4": "Wenn jemand zu dieser Menschenmenge ginge und sie fragen würde, ",
   "an8.8:6.5": "woher sie das Korn hätten, wie sollte diese Menschenmenge richtig antworten?“ ",
