--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -118,5 +118,6 @@
   "dn16:1.10.11": "opažaj prestanka, može se očekivati da oni napreduju, a ne da propadaju. ",
   "dn16:1.10.12": "Sve dok ovih sedam načela budu imali čvrsto uporište među monasima, sve dok ih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne da propadaju.",
   "dn16:1.11.1": "Monasi, izložiću vam još šest načela na kojima monasi opstaju, ne propadaju. Slušajte i dobro zapamtite šta ću vam reći.”",
-  "dn16:1.11.2": "„Da, poštovani gospodine,” odgovoriše monasi."
+  "dn16:1.11.2": "„Da, poštovani gospodine,” odgovoriše monasi.",
+  "dn16:1.11.3": "A Blaženi ovako nastavi:"
 }
