--- a/translation/de/sabbamitta/sutta/an/an8/an8.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.8_translation-de-sabbamitta.json
@@ -33,7 +33,7 @@
   "an8.8:6.2": "und eine große Menschenmenge würde davon Getreide nehmen, ",
   "an8.8:6.3": "mit Tragestangen, Körben, in Schürzen oder mit den Händen. ",
   "an8.8:6.4": "Wenn jemand zu dieser Menschenmenge ginge und sie fragen würde, ",
-  "an8.8:6.5": "woher sie das Korn hätten, wie sollte diese Menschenmenge richtig antworten?“ ",
+  "an8.8:6.5": "woher sie das Getreide hätten, wie sollte diese Menschenmenge richtig antworten?“ ",
   "an8.8:6.6": "„Herr, sie sollten antworten, dass sie es von diesem großen Haufen Korn hätten.“ ",
   "an8.8:6.7": "„Ebenso, Götterkönig, wurde alles, was gut gesagt wurde, vom Gesegneten gesagt, dem Vollendeten, dem vollkommen erwachten Buddha. ",
   "an8.8:6.8": "Sowohl ich als auch andere verlassen uns vollständig darauf, wenn wir sprechen.“ ",
