--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -120,5 +120,6 @@
   "dn16:1.11.1": "Monasi, izložiću vam još šest načela na kojima monasi opstaju, ne propadaju. Slušajte i dobro zapamtite šta ću vam reći.”",
   "dn16:1.11.2": "„Da, poštovani gospodine,” odgovoriše monasi.",
   "dn16:1.11.3": "A Blaženi ovako nastavi:",
-  "dn16:1.11.4": "(1) „Monasi, sve dok monasi budu blago postupali telom prema svojim saputnicima u svetačkom životu, kako javno, tako i nasamo, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.11.4": "(1) „Monasi, sve dok monasi budu blago postupali telom prema svojim saputnicima u svetačkom životu, kako javno, tako i nasamo, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.11.5": "(2-3) Sve dok monasi budu blago postupali govorom…"
 }
