--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -122,5 +122,6 @@
   "dn16:1.11.3": "A Blaženi ovako nastavi:",
   "dn16:1.11.4": "(1) „Monasi, sve dok monasi budu blago postupali telom prema svojim saputnicima u svetačkom životu, kako javno, tako i nasamo, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.11.5": "(2-3) Sve dok monasi budu blago postupali govorom…",
-  "dn16:1.11.6": "umom prema svojim saputnicima u svetačkom životu, kako javno, tako i nasamo, može se očekivati da oni napreduju, a ne da propadaju."
+  "dn16:1.11.6": "umom prema svojim saputnicima u svetačkom životu, kako javno, tako i nasamo, može se očekivati da oni napreduju, a ne da propadaju.",
+  "dn16:1.11.7": "Sve dok monasi budu bez predomišljanja delili ono što su na propisan način dobili, čak i hranu u svojoj prosjačkoj zdeli, koristili zajedno sa svojim saputnicima u svetačkom životu, može se očekivati da oni napreduju, a ne da propadaju."
 }
