Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -126,5 +126,6 @@
   "dn16:1.11.7": "Sve dok monasi budu bez predomišljanja delili ono što su na propisan način dobili, čak i hranu u svojoj prosjačkoj zdeli, koristili zajedno sa svojim saputnicima u svetačkom životu, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.11.8": "Sve dok monasi budu živeli u skladu sa pravilima koja dele sa svojim saputnicima u svetačkom životu, kako javno, tako i nasamo – pravilima koja su bez kršenja, nedostataka, prljanja, defekta, već oslobađaju, a mudri ih hvale, bez vezivanja za njih, pravilima koja doprinose koncentraciji – može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.11.9": "Sve dok monasi vođeni ispravnim razumevanjem – plemenitim, oslobađajućim, onoga ko u skladu sa njim živi vodi do potpunog okončanja patnje – budu i javno i nasamo živeli među svojim saputnicima u svetačkom životu koji dele isto takvo razumevanje, može se očekivati da oni napreduju, a ne da propadaju. ",
-  "dn16:1.11.10": "Sve \ndok ovih šest načela budu imali čvrsto uporište među monasima, sve dok \nih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne \nda propadaju."
+  "dn16:1.11.10": "Sve \ndok ovih šest načela budu imali čvrsto uporište među monasima, sve dok \nih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne \nda propadaju.",
+  "dn16:1.12.1": "Dok je živeo kraj Rāđagahe, na Lešinarevoj hridi, Blaženi je često govorio monasima o Dhammi:"
 }
