--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -127,5 +127,6 @@
   "dn16:1.11.8": "Sve dok monasi budu živeli u skladu sa pravilima koja dele sa svojim saputnicima u svetačkom životu, kako javno, tako i nasamo – pravilima koja su bez kršenja, nedostataka, prljanja, defekta, već oslobađaju, a mudri ih hvale, bez vezivanja za njih, pravilima koja doprinose koncentraciji – može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.11.9": "Sve dok monasi vođeni ispravnim razumevanjem – plemenitim, oslobađajućim, onoga ko u skladu sa njim živi vodi do potpunog okončanja patnje – budu i javno i nasamo živeli među svojim saputnicima u svetačkom životu koji dele isto takvo razumevanje, može se očekivati da oni napreduju, a ne da propadaju. ",
   "dn16:1.11.10": "Sve \ndok ovih šest načela budu imali čvrsto uporište među monasima, sve dok \nih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne \nda propadaju.”",
-  "dn16:1.12.1": "Dok je živeo kraj Rāđagahe, na Lešinarevoj hridi, Blaženi je često govorio monasima o Dhammi:"
+  "dn16:1.12.1": "Dok je živeo kraj Rāđagahe, na Lešinarevoj hridi, Blaženi je često govorio monasima o Dhammi:",
+  "dn16:1.12.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost."
 }
