--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -128,5 +128,6 @@
   "dn16:1.11.9": "Sve dok monasi vođeni ispravnim razumevanjem – plemenitim, oslobađajućim, onoga ko u skladu sa njim živi vodi do potpunog okončanja patnje – budu i javno i nasamo živeli među svojim saputnicima u svetačkom životu koji dele isto takvo razumevanje, može se očekivati da oni napreduju, a ne da propadaju. ",
   "dn16:1.11.10": "Sve \ndok ovih šest načela budu imali čvrsto uporište među monasima, sve dok \nih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne \nda propadaju.”",
   "dn16:1.12.1": "Dok je živeo kraj Rāđagahe, na Lešinarevoj hridi, Blaženi je često govorio monasima o Dhammi:",
-  "dn16:1.12.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost."
+  "dn16:1.12.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
+  "dn16:1.12.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
 }
