Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -129,5 +129,6 @@
   "dn16:1.11.10": "Sve \ndok ovih šest načela budu imali čvrsto uporište među monasima, sve dok \nih se oni budu pridržavali, može se očekivati da monasi napreduju, a ne \nda propadaju.”",
   "dn16:1.12.1": "Dok je živeo kraj Rāđagahe, na Lešinarevoj hridi, Blaženi je često govorio monasima o Dhammi:",
   "dn16:1.12.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
-  "dn16:1.12.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
+  "dn16:1.12.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
+  "dn16:1.12.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
 }
