--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -131,5 +131,5 @@
   "dn16:1.12.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:1.12.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
   "dn16:1.12.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
-  "dn16:1.12.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen nečistoća, a to su"
+  "dn16:1.12.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su"
 }
