Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -134,5 +134,6 @@
   "dn16:1.12.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:1.12.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:1.13.1": "Kada je ostao kraj Rāđagahe koliko je želeo, Blaženi reče poštovanom Ānandi:",
-  "dn16:1.13.2": "„Hajde, Ānanda, idemo do Ambalaṭṭhike.”"
+  "dn16:1.13.2": "„Hajde, Ānanda, idemo do Ambalaṭṭhike.”",
+  "dn16:1.13.3": "„Da, poštovani gospodine,“ odgovori Ānanda."
 }
