--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -148,5 +148,6 @@
   "dn16:1.15.2": "„Hajde, Ānanda, idemo do Nāḷande.”",
   "dn16:1.15.3": "„Da, poštovani gospodine,“ odgovori Ānanda.",
   "dn16:1.15.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nāḷandu.",
-  "dn16:1.15.5": "Tu se smestio u Pāvārikinom mangovom gaju."
+  "dn16:1.15.5": "Tu se smestio u Pāvārikinom mangovom gaju.",
+  "dn16:1.16.0": "4. Sāriputtin lavovski rik"
 }
