Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "mn81:6.5": "Denn ich betrachte es als heilig, diesen Gesegneten zu sehen.‘ ",
   "mn81:6.6": "Darauf sagte Jotipāla zu ihm: ",
   "mn81:6.7": "‚Genug, lieber Ghaṭīkāra. ",
-  "mn81:6.8": "Was soll es bringen, diesen Glatzkopf zu sehen, diesen falschen Asketen?‘ ",
+  "mn81:6.8": "Was soll es bringen, diesen glatzköpfigen Pfaffen zu sehen, diesen falschen Asketen?‘ ",
   "mn81:6.9": "Zum zweiten Mal … ",
   "mn81:6.10": "und zum dritten Mal wandte sich Ghaṭīkāra an Jotipāla: ",
   "mn81:6.11": "‚Komm, lieber Jotipāla, lass uns gehen, um den Gesegneten Kassapa zu sehen, den Vollendeten, den vollkommen erwachten Buddha. ",
