Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "mn81:6.12": "Denn ich betrachte es als heilig, diesen Gesegneten zu sehen.‘ ",
   "mn81:6.13": "Und zum dritten Mal sagte Jotipāla zu ihm: ",
   "mn81:6.14": "‚Genug, lieber Ghaṭīkāra. ",
-  "mn81:6.15": "Was soll es bringen, diesen Glatzkopf zu sehen, diesen falschen Asketen?‘ ",
+  "mn81:6.15": "Was soll es bringen, diesen glatzköpfigen Pfaffen zu sehen, diesen falschen Asketen?‘ ",
   "mn81:6.16": "‚Nun, lieber Jotipāla, dann lass uns Badepaste aus zerriebenen Muschelschalen nehmen und zum Fluss gehen, um zu baden.‘ ",
   "mn81:6.17": "‚Ja, Lieber‘, antwortete Jotipāla. ",
   "mn81:6.18": "Und so taten sie. ",
