Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "mn81:7.4": "Denn ich betrachte es als heilig, diesen Gesegneten zu sehen.‘ ",
   "mn81:7.5": "Darauf sagte Jotipāla zu ihm: ",
   "mn81:7.6": "‚Genug, lieber Ghaṭīkāra. ",
-  "mn81:7.7": "Was soll es bringen, diesen Glatzkopf zu sehen, diesen falschen Asketen?‘ ",
+  "mn81:7.7": "Was soll es bringen, diesen glatzköpfigen Pfaffen zu sehen, diesen falschen Asketen?‘ ",
   "mn81:7.8": "Zum zweiten Mal … ",
   "mn81:7.9": "und zum dritten Mal wandte sich Ghaṭīkāra an Jotipāla: ",
   "mn81:7.10": "‚Lieber Jotipāla, das Kloster des Buddha Kassapa ist nicht weit von hier. ",
