Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "ud7.9:2.3": "„Bitte, Ānanda, hol mir etwas Wasser aus dem Brunnen.“ ",
   "ud7.9:3.1": "Darauf sagte der Ehrwürdige Ānanda zum Buddha: ",
   "ud7.9:3.2": "„Gerade haben die Brahmanen und Hausbesitzer von Thūṇa Gras und Spreu in den Brunnen gefüllt bis zum Rand im Gedanken: ",
-  "ud7.9:3.3": "‚Dass diese Glatzköpfe, diese falschen Asketen, kein Wasser trinken sollen!‘“ ",
+  "ud7.9:3.3": "‚Dass diese glatzköpfigen Pfaffen, diese falschen Asketen, kein Wasser trinken sollen!‘“ ",
   "ud7.9:4.1": "Zum zweiten Mal … ",
   "ud7.9:4.2": "und zum dritten Mal sagte der Buddha zu Ānanda: ",
   "ud7.9:4.3": "„Bitte, Ānanda, hol mir etwas Wasser aus dem Brunnen.“ ",
