Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "sn35.18:0.1": "Verbundene Lehrreden 35.18 ",
   "sn35.18:0.2": "2. Das Kapitel mit Paaren ",
   "sn35.18:0.3": "Wenn es keine vorteilhaften Folgen gäbe (2) ",
-  "sn35.18:1.1": "„Mönche und Nonnen, wenn es bei Bildern keine vorteilhaften Folgen gäbe, würden die Lebewesen sie nicht lieben. ",
+  "sn35.18:1.1": "„Mönche und Nonnen, wenn es bei Bildern keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihnen angezogen. ",
   "sn35.18:1.2": "Aber da es bei Bildern vorteilhafte Folgen gibt, lieben die Lebewesen sie. ",
   "sn35.18:1.3": "Wenn es bei Bildern keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn35.18:1.4": "Aber da es bei Bildern nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
