Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.28_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.28_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.28_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn22.28:0.2": "3. Das Kapitel über die Last ",
   "sn22.28:0.3": "Vorteilhafte Folgen (3) ",
   "sn22.28:1.1": "In Sāvatthī. ",
-  "sn22.28:1.2": "„Mönche und Nonnen, wenn es bei der Form keine vorteilhaften Folgen gäbe, würden die Lebewesen sie nicht lieben. ",
+  "sn22.28:1.2": "„Mönche und Nonnen, wenn es bei der Form keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihnen angezogen. ",
   "sn22.28:1.3": "Aber da es bei der Form vorteilhafte Folgen gibt, lieben die Lebewesen sie. ",
   "sn22.28:1.4": "Wenn es bei der Form keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn22.28:1.5": "Aber da es bei der Form nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
