Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.17_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn35.17:1.8": "Wenn es bei der Nase keine vorteilhaften Folgen gäbe … ",
   "sn35.17:1.9": "Wenn es bei der Zunge keine vorteilhaften Folgen gäbe … ",
   "sn35.17:1.15": "Wenn es beim Körper keine vorteilhaften Folgen gäbe … ",
-  "sn35.17:1.16": "Wenn es beim Geist keine vorteilhaften Folgen gäbe, würden die Lebewesen ihn nicht lieben. ",
+  "sn35.17:1.16": "Wenn es beim Geist keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihm angezogen. ",
   "sn35.17:1.17": "Aber da es beim Geist vorteilhafte Folgen gibt, lieben die Lebewesen ihn. ",
   "sn35.17:1.18": "Wenn es beim Geist keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn35.17:1.19": "Aber da es beim Geist nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
