Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "sn22.60:7.2": "Wenn Entscheidungen ausschließlich schmerzhaft wären … ",
   "sn22.60:8.1": "Wenn Bewusstsein ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, wären die Lebewesen nicht von ihm angezogen. ",
   "sn22.60:8.2": "Aber da Bewusstsein angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, sind die Lebewesen von ihm angezogen. ",
-  "sn22.60:8.3": "Da sie es lieben, sind sie daran gebunden und werden so verunreinigt. ",
+  "sn22.60:8.3": "Da sie von ihm angezogen sind, sind sie daran gebunden und werden so verunreinigt. ",
   "sn22.60:8.4": "Das ist ein Grund und eine Ursache für die Verunreinigung der Lebewesen. ",
   "sn22.60:8.5": "So werden Lebewesen aus einem Grund und einer Ursache verunreinigt.“ ",
   "sn22.60:9.1": "„Aber Herr, was ist der Grund und die Ursache für die Läuterung der Lebewesen? ",
