Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.99_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.99_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.99_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn22.99:0.3": "Die Leine ",
   "sn22.99:1.1": "In Sāvatthī. ",
   "sn22.99:1.2": "„Mönche und Nonnen, das Umherwandern hat keinen bekannten Anfang. ",
-  "sn22.99:1.3": "Ein Anfangspunkt für das Umherstreifen und Umherwandern der Lebewesen, die von Unwissenheit behindert und von Verlangen gefesselt sind, ist nicht gefunden. ",
+  "sn22.99:1.3": "Ein Anfangspunkt für das Umherstreifen und Umherwandern der Lebewesen, die von Unwissenheit eingehüllt und von Verlangen gefesselt sind, ist nicht gefunden. ",
   "sn22.99:1.4": "Es kommt eine Zeit, da das Weltmeer verdorrt und vertrocknet und nicht mehr da ist. ",
   "sn22.99:1.5": "Doch für die Lebewesen, die umherstreifen und umherwandern, von Unwissenheit behindert und von Verlangen gefesselt, ist es nicht möglich, dem Leiden ein Ende zu machen, sage ich. ",
   "sn22.99:1.6": "Es kommt eine Zeit, da Sineru, der König der Berge, verbrennt und zerfällt und nicht mehr da ist. ",
