Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -26,7 +26,7 @@
   "mn95:6.7": "kad gerbiamieji palauktų, brahmanas Čianki taip pat eis pamatyti atsiskyrėlį Gotamą.”",
   "mn95:6.8": "„Gerai, gerbiamasis,” – atsakė ministras brahmanui Čianki ir nuėjo pas Opasados brahmanus namų šeimininkus ir nuėjęs pas juos pasakė jiems:",
   "mn95:6.9": "„Gerbiamieji, brahmanas Čanki sako,",
-  "mn95:6.10": "kad gerbiamieji palauktų, brahmanas Čianki taip pat eis pamatyti atsiskyrelį Gotamą.”",
+  "mn95:6.10": "kad gerbiamieji palauktų, brahmanas Čianki taip pat eis pamatyti atsiskyrėlį Gotamą.”",
   "mn95:7.1": "Tuo gi pat metu vienu ar kitu reikalu Opasadoje buvo apsistoję penki šimtai brahmanų iš įvairių šalių.",
   "mn95:7.2": "Išgirdo gi tie brahmanai,",
   "mn95:7.3": "kad brahmanas Čianki lyg ir eis pamatyti atsiskyrėlį Gotamą.",
