Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -33,7 +33,7 @@
   "mn95:7.4": "Ir štai tie brahmanai nuėjo pas brahmaną Čianki. Atėję jie  pasakė brahmanui Čianki štai ką: ",
   "mn95:7.5": "„Ar tiesa, kad gerbiamas Čianki eis pamatyti atsiskyrėlį Gotamą?”",
   "mn95:7.6": "„Taip, gerbiamieji, galvoju",
-  "mn95:7.7": "eiti pamatyti atsiskyrelį Gotamą.”",
+  "mn95:7.7": "eiti pamatyti atsiskyrėlį Gotamą.”",
   "mn95:8.1": "„Tegul gerbiamas Čianki neeina pamatyti atsiskyrėlio Gotamos.",
   "mn95:8.2": "Nedera gerbiamam Čianki eiti pamatyti atsiskyrėlį Gotamą.",
   "mn95:8.3": "Tai atsiskyrėliui Gotamai dera eiti pamatyti gerbiamą Čiankį.",
