Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -135,7 +135,7 @@
   "mn95:13.21": "„Mes žinome Tai, mes matome Tai.",
   "mn95:13.22": "Tik Tai yra tiesa, visa kita yra klaidinga.”",
   "mn95:13.23": "Panašiai, Bharadvadžia, kaip jei būtų vienas kitą liečiančių neregių virtinė. Pirmasis jų nemato, viduriniai nemato, ir paskutinysis taip pat nemato.",
-  "mn95:13.24": "Lygiai gi taip pat, bharadvadžia, išeina, kad brahmanų pasakymas, sakyčiau, yra panašus į neregių virtinę: pirmasis jų nemato, viduriniai nemato, ir paskutinysis taip pat nemato.",
+  "mn95:13.24": "Lygiai gi taip pat, Bharadvadžia, išeina, kad brahmanų pasakymas, sakyčiau, yra panašus į neregių virtinę: pirmasis jų nemato, viduriniai nemato, ir paskutinysis taip pat nemato.",
   "mn95:13.25": "Kaip manai, Bharadvadžia, ",
   "mn95:13.26": "Jei taip jau yra, ar neišeina, kad brahmanų tikėjimas yra nepagrįstas?”",
   "mn95:14.1": "„Brahmanai, Gerbiamas Gotama, ne tik iš tikėjimo tai garbina, bet ir dėl žodinio perdavimo tradicijos.”",
