Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -142,7 +142,7 @@
   "mn95:14.2": "„Pirmą tu, Bharadvažia, rėmeisi tikėjimu, o dabar kalbi apie tradiciją.",
   "mn95:14.3": "Yra penki dalykai, Bharadvadžia, kurie čia ir dabar gali turėti dvejopą rezultatą.",
   "mn95:14.4": "Kokie penki? ",
-  "mn95:14.5": "Tikėjimas, patrauklumas, tradicija, įrodymų apsvartymas, požiūrio priėmimas po apmąstymo.",
+  "mn95:14.5": "Tikėjimas, patrauklumas, tradicija, įrodymų apsvarstymas, požiūrio priėmimas po apmąstymo.",
   "mn95:14.6": "Šie penki dalykai, Bharadvadžia, čia ir dabar gali turėti dvejopą rezultatą.",
   "mn95:14.7": "Nors, Bharadvadžia, ir būtų kažkuo labai tikima, tai gali būti tuščia, be vertės, melaginga.",
   "mn95:14.8": "Nors ir nebūtų kažkuo labai tikima, tai gali būti realu, tikra, teisinga. ",
