Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -278,7 +278,7 @@
   "mn95:31.6": "Tad laikymasis arti (mokytojo) ypač padeda klausytis.”",
   "mn95:32.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda laikytis arti (mokytojo)?",
   "mn95:32.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį laikytis arti (mokytojo).”",
-  "mn95:32.3": "„Ypač padeda laikytis atri (mokytojo), Bharadvadžia, nuėjimas pas jį.",
+  "mn95:32.3": "„Ypač padeda laikytis arti (mokytojo), Bharadvadžia, nuėjimas pas jį.",
   "mn95:32.4": "Nenuėjus pas jį, arti jo nesilaikysi,",
   "mn95:32.5": "bet dėl to, kad pas jį nueinama, yra laikomasi arti jo.",
   "mn95:32.6": "Tad nuėjimas pas mokytoją ypač padeda ilaikytis arti jo.”",
