Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -298,7 +298,7 @@
   "mn95:34.8": "Tai mums patinka, yra priimtina mums, esame patenkinti tuo. ",
   "mn95:34.9": "Viską, apie ką paklausėme Gerbiamojo Gotamos, jis mums tai ir paaiškino.",
   "mn95:34.10": "Tai mums patinka, yra priimtina mums, esame patenkinti tuo. ",
-  "mn95:34.11": "Anksčiau, Gerbiamas Gotama, mas galvojome: ",
+  "mn95:34.11": "Anksčiau, Gerbiamas Gotama, mes galvojome: ",
   "mn95:34.12": "„Kas tie skustagalviai, atsiskyteliukšiai, vasalai, tamsios Brahmos pėdų atžalos palyginus su mokymo (_dhammos_) žinovais?",
   "mn95:34.13": "Na bet Gerbiamas Gotama sužadino manyje meilę atsiskyrėliams, pasitikėjimą atsiskyrėliais, pagarbą atsiskyrėliams.",
   "mn95:35.1": "„Nuostabu, Gerbiamas Gotama …",
