Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -111,7 +111,7 @@
   "mn95:12.10": "Ir štai jaunuolis brahmanas Kapatika tarė: ",
   "mn95:12.11": "„Gerbiamas Gotama, apie tas senųjų brahmanų šventąsias Vedų giesmes, kurios perduodamos žodžiu ir yra kanoninės, brahmanai yra visiškai įsitikinę, kad",
   "mn95:12.12": "tik tai yra tiesa, visa kita yra klaidinga.",
-  "mn95:12.13": "Ką Gerbiamas Gotamas pasakys apie tai?”",
+  "mn95:12.13": "Ką Gerbiamas Gotama pasakys apie tai?”",
   "mn95:13.1": "„Na bet, Bharadvadžia, ar yra tarp brahmanų nors vienas brahmanas, kuris sako:",
   "mn95:13.2": "„Aš žinau Tai, aš matau Tai.",
   "mn95:13.3": "Tik Tai yra tiesa, visa kita yra klaidinga.”",
