Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -139,7 +139,7 @@
   "mn95:13.25": "Kaip manai, Bharadvadžia, ",
   "mn95:13.26": "Jei taip jau yra, ar neišeina, kad brahmanų tikėjimas yra nepagrįstas?”",
   "mn95:14.1": "„Brahmanai, Gerbiamas Gotama, ne tik iš tikėjimo tai garbina, bet ir dėl žodinio perdavimo tradicijos.”",
-  "mn95:14.2": "„Pirmą tu, Bharadvažia, rėmeisi tikėjimu, o dabar kalbi apie tradiciją.",
+  "mn95:14.2": "„Pirmą tu, Bharadvadžia, rėmeisi tikėjimu, o dabar kalbi apie tradiciją.",
   "mn95:14.3": "Yra penki dalykai, Bharadvadžia, kurie čia ir dabar gali turėti dvejopą rezultatą.",
   "mn95:14.4": "Kokie penki? ",
   "mn95:14.5": "Tikėjimas, patrauklumas, tradicija, įrodymų apsvarstymas, požiūrio priėmimas po apmąstymo.",
