Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn95_translation-lt-piyadassi.json
@@ -243,7 +243,7 @@
   "mn95:26.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda norėti veikti? ",
   "mn95:26.2": "Klausiame Gerbiamojo Gotamos apie dalyką ypač padedantį norėti veikti.”",
   "mn95:26.3": "„Ypač padeda norėti veikti, Bharadvadžia, mokymo priėmimas po apmąstymo.",
-  "mn95:26.4": "Be mokymo priėmimo po apmąstymo, nekyls noras veikti,",
+  "mn95:26.4": "Be mokymo priėmimo po apmąstymo, nekils noras veikti,",
   "mn95:26.5": "bet dėl mokymo priėmimo po apmąstymo, kyla noras veikti.",
   "mn95:26.6": "Tad mokymo priėmimas po apmąstymo ypač padeda norėti veikti.”",
   "mn95:27.1": "„Bet, Gerbiamas Gotama, koks dalykas ypač padeda priimti mokymą po apmąstymo?",
